Ui issues fixed in modal and dropmenus on mobile and pc view

--- a/script/css/admin.css
+++ b/script/css/admin.css
@@ -2619,18 +2619,19 @@ a.sb-btn.sb-icon-check:not(.sb-loading):before {
   cursor: pointer;
   display: inline-block;
   line-height: 0;
-  height: 35px;
-  min-height: 35px;
+  height: 20px;
+  min-height: 20px;
   outline: 0;
   padding: 0;
   margin: 0;
   text-align: center;
   vertical-align: middle;
-  width: 35px;
-  min-width: 35px !important;
+  width: 20px;
+  min-width: 20px !important;
   outline: none;
   box-shadow: none;
   -webkit-appearance: none;
+  position: relative;
 }
 .sb-input > input[type=checkbox]:checked:before {
   content: "w" !important;
@@ -2639,12 +2640,16 @@ a.sb-btn.sb-icon-check:not(.sb-loading):before {
   font-weight: normal !important;
   font-variant: normal !important;
   text-transform: none !important;
-  line-height: 35px;
-  font-size: 15px;
+  line-height: 18px;
+  font-size: 10px;
   color: #155CFD;
   margin: 0;
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 .sb-input > div {
   padding-right: 30px;
@@ -10176,8 +10181,9 @@ span.initials.avatar_name {
 }
 .sb-setting .repeater-item > i {
   position: absolute;
-  right: -30px;
-  top: 50%;
+  right: 0px;
+  top: 0%;
+  color: red;
   margin-top: 4px;
   width: 14px;
   font-size: 9px;
@@ -10190,7 +10196,7 @@ span.initials.avatar_name {
   color: rgb(202, 52, 52);
 }
 .sb-setting .repeater-item:first-child > i {
-  margin-top: -6px;
+  margin-top: 0px;
 }
 .sb-setting .sb-repeater-add + .sb-btn-icon {
   transform: translate(11px, 13px);
@@ -11870,17 +11876,17 @@ ul.status-list.dropdown-menu::-webkit-scrollbar {
   padding: 0;
   max-width: 700px;
   max-height: 700px;
-  left: 50%;
-  top: 50%;
-  margin-left: 150px;
-  margin-top: 150px;
+  left: 50% !important;
+  top: 50% !important;
+  transform: translateX(-50%) translateY(-50%) !important;
+  margin-left: 0 !important;
+  margin-top: 0 !important;
   border-radius: 6px;
   display: none;
   transition: opacity 0.4s, transform 0.4s;
 }
 .sb-lightbox.sb-active {
   display: block;
-  animation: sb-lightbox-animation 0.5s;
 }
 .sb-lightbox.sb-dialogflow-intent-box, .sb-lightbox.sb-updates-box {
   height: calc(100vh - 100px);
@@ -13532,6 +13538,10 @@ table thead {
   z-index: 10;
 }
 
+.choices {
+  width: 100%;
+  max-width: 100% !important;
+}
 .choices .choices__inner,
 .choices .choices__input {
   background-color: #fff;
@@ -14104,7 +14114,7 @@ li.menu_head:hover {
 .choices .choices__inner {
   padding: 3px 10px 3px 10px;
   min-height: 30px;
-  max-width: 97%;
+  max-width: 100%;
   box-sizing: border-box;
 }
 
@@ -16289,6 +16299,17 @@ input[type=color] {
   text-align: left;
   font-size: 14px;
   color: #000;
+}
+
+@media (max-width: 767.98px) {
+  .sb-account-box .sb-tab .sb-content {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+.form-control[type=checkbox] {
+  height: 10px;
+  width: 10px;
 }
 
 /*# sourceMappingURL=admin.css.map */
