--- a/script/css/shared.css
+++ b/script/css/shared.css
@@ -25,6 +25,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.sb-icon-arrows-in:before {
+  content: "\e90d";
+}
+
+.sb-icon-arrows-out:before {
+  content: "\e90b";
+}
+
+.sb-icon-sidebar:before {
+  content: "\e90c";
+}
+
 .sb-icon-arrow-up:before {
   content: "a";
   transform: rotate(180deg);
@@ -2230,8 +2242,8 @@ div ul.sb-menu,
 
 .sb-chat .sb-article > .sb-title:first-child {
   border-bottom: 1px solid rgb(212, 212, 212);
-  padding-bottom: 30px;
-  margin-bottom: 30px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
 }
 .sb-chat .sb-article h2 {
   font-size: 17px;
@@ -2597,18 +2609,19 @@ a.sb-btn.sb-icon-check:not(.sb-loading):before {
   cursor: pointer;
   display: inline-block;
   line-height: 0;
-  height: 35px;
-  min-height: 35px;
+  height: 20px;
+  min-height: 20px;
   outline: 0;
   padding: 0;
   margin: 0;
   text-align: center;
   vertical-align: middle;
-  width: 35px;
-  min-width: 35px !important;
+  width: 20px;
+  min-width: 20px !important;
   outline: none;
   box-shadow: none;
   -webkit-appearance: none;
+  position: relative;
 }
 .sb-input > input[type=checkbox]:checked:before {
   content: "w" !important;
@@ -2617,12 +2630,16 @@ a.sb-btn.sb-icon-check:not(.sb-loading):before {
   font-weight: normal !important;
   font-variant: normal !important;
   text-transform: none !important;
-  line-height: 35px;
-  font-size: 15px;
+  line-height: 18px;
+  font-size: 10px;
   color: #155CFD;
   margin: 0;
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 .sb-input > div {
   padding-right: 30px;
@@ -2839,7 +2856,7 @@ a.sb-btn.sb-icon-check:not(.sb-loading):before {
 }
 
 .sb-input-select-input > div.sb-select-phone + input {
-  padding: 5px 0 0 100px;
+  padding: 5px 0 0 90px !important;
 }
 .sb-input-select-input > div.sb-select-phone .sb-select-search input {
   padding: 0 10px;
